objects/SAP_Originating_System_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>BusinessUnit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteType__c</fullName>
        <label>QuoteType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Originating_System__c</fullName>
        <label>SAP Originating System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPEND_ApplicationId__c</fullName>
        <label>ZPEND_ApplicationId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SAP Originating System Mapping</label>
    <listViews>
        <fullName>ALL_MAPPINGS</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>BusinessUnit__c</columns>
        <columns>QuoteType__c</columns>
        <columns>SAP_Originating_System__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL MAPPINGS</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SAP Originating System Mappings</pluralLabel>
</CustomObject>